--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "librime"]
 	path = librime
-	url = https://github.com/rime/librime.git
+	url = https://github.com/chenqinggang001/librime-ios12.git
 [submodule "boost-iosx"]
 	path = boost-iosx
 	url = https://github.com/imfuxiao/boost-iosx.git
